--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 .DS_Store
 .DS_Store
 .DS_Store
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/modules.xml
+.idea/Rust.iml
+.idea/vcs.xml
+.idea/workspace.xml
